2013-07-04  Cedric Bail

	* Eina: add eina_tiler_area_size_set and eina_tiler_strict_set to make Eina_Tiler in par with Evas_Tilebuf.

2013-07-03  Shinwoo Kim

	* Ecore: add atoms - enable, disable - to support accessibility

2013-07-02  ChunEon Park (Hermet)

	* Evas: optimize proxy rendering. Rendering performance is increased up to 2x in some cases.

2013-07-02  Cedric Bail

	* Eet: force thread to always run during eet_cache_concurrency test.

2013-06-25  Tom Hacohen

	* Evas textblock: Fixed issue when parsing formats with quotes.

2013-06-28  Jiyoun Park

	* Evas: Fix jpeg loader cannot deal with exif information correctly

2013-06-26  Daniel Willmann

	* Evas: Fix evas_common_convert_yuv_42* functions to actually return
	the converted data.

2013-06-25  Tom Hacohen

	* Evas textblock: Fixed issue with textblocks without fonts
	segfaulting.

2013-06-24  Cedric Bail

	* Evas: add support for asynchronously uploading GL texture.

2013-06-22  Thiep Ha

        * Edje: Move cursor to correct position when selection handlers are pressed.

2013-06-20  Christophe Sadoine

	* Evil: Added strsep function.

2013-06-19  Cedric Bail

	* Evas: optimized path for when map use the same color for all corner.

2013-06-19  Christophe Sadoine

	* Evil: Added evil_rename function, a wrapper around rename().

2013-06-18  Cedric Bail

	* Evas: Use Eo array of callbacks to reduce edje memory foot print of Evas_Object_Box and Evas_Object_Table.

2013-06-17  Sung W. Park (sung_)

	* Evas: add partial rendering support for Evas_GL direct rendering

2013-06-17  Cedric Bail

	* Edje: Use Eo array of callbacks to reduce edje memory foot print.

2013-06-13  Jiyou Park

        * Evas: Fix crash if app call image object update add after calling api like fileset.

2013-06-11  Carsten Haitzler (The Rasterman)

        * Support qualcomm begin/end tile extension for partial update

2013-06-06  ChunEon Park (Hermet)

        * Edje: support edc map color set

2013-06-05  Jiyou Park
