@@ -32,6 +32,7 @@ Additions:
      - Add eina_str_convert_len() to work around broken eina_str_convert()
      - Add eina_file_dup()
      - Add eina_tiler_area_size_set(), eina_tiler_strict_set()
+     - Add eina_file_map_populate()
     * Eet:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
